# bxt-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  build.rs  runhl.sh  rustfmt.toml
.cargo/: config  config.toml
.github/workflows/: ci.yml
bxt-ipc-types/: Cargo.toml
bxt-ipc-types/src/: lib.rs
bxt-macros/: Cargo.toml
bxt-macros/src/: lib.rs
bxt-macros/tests/: pattern.rs
bxt-macros/tests/ui/: missing-second-question.rs  missing-second-question.stderr  non-hex-character.rs  non-hex-character.stderr  pattern-ends-on-double-question.rs  pattern-ends-on-double-question.stderr
bxt-patterns/: Cargo.toml
bxt-patterns/src/: lib.rs
bxt-strafe/: Cargo.toml
bxt-strafe/src/: lib.rs  steps.rs  vct.rs
bxt-vct/: Cargo.toml
bxt-vct/src/: lib.rs
src/: gl.rs  lib.rs  macros.rs  vulkan.rs  windows.rs
src/ffi/: buttons.rs  cl_entity.rs  com_model.rs  command.rs  cvar.rs  edict.rs  mod.rs  physent.rs  playermove.rs  pmplane.rs  pmtrace.rs  triangleapi.rs  usercmd.rs
src/hooks/: bxt.rs  client.rs  engine.rs  mod.rs  opengl32.rs  sdl.rs  server.rs  utils.rs  windows.rs
src/modules/: capture_skip_non_gameplay.rs  capture_video_per_demo.rs  clear.rs  comment_overflow_fix.rs  cvars.rs  demo_playback.rs  disable_loading_text.rs  disable_skybox.rs  emit_sound.rs  fade_remove.rs  fix_widescreen.rs  force_fov.rs  help.rs  hud.rs  hud_scale.rs  lightstyle.rs  mod.rs  module_list.rs  novis.rs  player_movement_tracing.rs  remote_forbid.rs  remove_fade.rs  remove_shake.rs  remove_skybox.rs  remove_stuffs.rs  rng_set.rs  scoreboard_remove.rs  shake_remove.rs  show_player_in_hltv.rs  skybox_change.rs  skybox_remove.rs  tas_recording.rs  tas_rng_fix.rs  tas_server_time_fix.rs  viewmodel.rs  viewmodel_remove.rs  viewmodel_sway.rs  wallhack.rs
src/modules/campath/: bvh.rs  camio.rs  common.rs  exporter.rs  mod.rs
src/modules/capture/: accumulate.comp  accumulate.spv  color_conversion.comp  color_conversion.spv  mod.rs  muxer.rs  opengl.rs  recorder.rs  vulkan.rs
src/modules/capture_video_per_demo/: mod.rs  remote.rs
src/modules/commands/: args.rs  handler.rs  mod.rs
src/modules/ghost/: misc.rs  mod.rs
src/modules/ghost/get_ghost/: demo.rs  mod.rs  romanian_jumpers.rs  simen.rs  surf_gateway.rs
src/modules/player_movement_tracing/: mod.rs  tracer.rs
src/modules/tas_editor/: editor.rs  mod.rs  objective.rs  remote.rs  simulator.rs  tracer.rs
src/modules/tas_logging/: mod.rs  serializer.rs
src/modules/tas_optimizer/: hltas_ext.rs  mod.rs  objective.rs  optimizer.rs  remote.rs  simulator.rs
src/modules/tas_studio/: hltas_bridge.rs  mod.rs  remote.rs  watcher.rs
src/modules/tas_studio/editor/: db.rs  mod.rs  operation.rs  toggle_auto_action.rs  utils.rs
src/modules/triangle_drawing/: mod.rs  triangle_api.rs
src/utils/: dl.rs  function.rs  main_thread_cell.rs  main_thread_ref_cell.rs  marker.rs  mod.rs  pointer.rs  variable.rs
test/: db_test.hltasproj
