[package]
name = "bxt-rs"
version = "1.0.0"
authors = ["Ivan Molodetskikh <yalterz@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
ash = "0.37.2"
bitflags = "1.3.2"
bxt-macros = { path = "bxt-macros" }
bxt-patterns = { path = "bxt-patterns" }
bxt-strafe = { path = "bxt-strafe" }
byte-slice-cast = "1.2.2"
color-eyre = { version = "0.6.2", default-features = false }
crossbeam-channel = "0.5.6"
git-version = "0.3.5"
glam = "0.22.0"
hltas = { version = "0.7.0", features = ["serde1"] }
ipc-channel = "0.16.0"
libc = "0.2.139"
libloading = "0.7.4"
once_cell = "1.17.0"
rand = "0.8.5"
rayon = "1.6.1"
rhai = { version = "1.12.0", features = ["no_closure", "no_custom_syntax", "no_module", "no_time", "f32_float", "serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tap = "1.0.1"
thiserror = "1.0.38"
tracing = "0.1.37"
tracing-chrome = "0.7.0"
tracing-subscriber = "0.3.16"

[target."cfg(windows)".dependencies]
minhook-sys = "0.1.1"

[target."cfg(windows)".dependencies.winapi]
version = "0.3.9"
features = ["libloaderapi", "psapi", "winuser", "synchapi", "handleapi", "processthreadsapi", "winbase", "winerror"]

[build-dependencies]
gl_generator = "0.14.0"

[profile.dev.package.bxt-patterns]
opt-level = 3

[profile.dev.package.bxt-vct]
opt-level = 3

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
overflow-checks = true # So no hidden unsoundness can sneak in.

[workspace]
members = [".", "bxt-macros", "bxt-patterns", "bxt-strafe", "bxt-vct"]
