[package]
name = "bxt-rs"
version = "1.0.0"
authors = ["Ivan Molodetskikh <yalterz@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
ash = "0.37.3"
bincode = "1.3.3"
bitflags = "2.3.3"
bxt-ipc-types = { version = "0.1.0", path = "bxt-ipc-types" }
bxt-macros = { path = "bxt-macros" }
bxt-patterns = { path = "bxt-patterns" }
bxt-strafe = { path = "bxt-strafe" }
byte-slice-cast = "1.2.2"
color-eyre = { version = "0.6.2", default-features = false }
crossbeam-channel = "0.5.8"
git-version = "0.3.5"
glam = "0.24.1"
hltas = { version = "0.8.0", features = ["serde1"] }
ipc-channel = "0.16.1"
itertools = "0.11.0"
libc = "0.2.147"
libloading = "0.8.0"
once_cell = "1.18.0"
rand = "0.8.5"
rayon = "1.7.0"
rhai = { version = "1.15.1", features = ["no_closure", "no_custom_syntax", "no_module", "no_time", "f32_float", "serde"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
tap = "1.0.1"
thiserror = "1.0.44"
tracing = "0.1.37"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.17"
tracing-tracy = "0.10.3"
tracy-client = { version = "0.16.1" }

[target."cfg(windows)".dependencies]
minhook-sys = "0.1.1"

[target."cfg(windows)".dependencies.winapi]
version = "0.3.9"
features = ["libloaderapi", "psapi", "winuser", "synchapi", "handleapi", "processthreadsapi", "winbase", "winerror"]

[dev-dependencies]
expect-test = "1.4.1"
hltas = { version = "0.8.0", features = ["serde1", "proptest1"] }
proptest = "1.2.0"

[build-dependencies]
gl_generator = "0.14.0"

[profile.dev.package.bxt-patterns]
opt-level = 3

[profile.dev.package.bxt-vct]
opt-level = 3

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
overflow-checks = true # So no hidden unsoundness can sneak in.

[workspace]
members = [".", "bxt-ipc-types", "bxt-macros", "bxt-patterns", "bxt-strafe", "bxt-vct"]
