[package]
name = "bxt-strafe"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = { version = "0.7.2", features = ["serde"] }
glam = { version = "0.20.2", features = ["serde"] }
hltas = { git = "https://github.com/HLTAS/hltas.git" }
ordered-float = "2.10.0"
serde = { version = "1.0.133", features = ["derive"] }
tap = "1.0.1"

[dev-dependencies]
ncollide3d = "0.32.0"
proptest = "1.0.0"
proptest-derive = "0.3.0"
hltas = { git = "https://github.com/HLTAS/hltas.git", features = ["proptest1"] }
