[package]
name = "bxt-strafe"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = { version = "0.7.2", features = ["serde"] }
bxt-vct = { path = "../bxt-vct" }
glam = { version = "0.21.3", features = ["serde"] }
hltas = "0.7.0"
serde = { version = "1.0.144", features = ["derive"] }
tap = "1.0.1"

[dev-dependencies]
ncollide3d = "0.33.0"
proptest = "1.0.0"
proptest-derive = "0.3.0"
hltas = { version = "0.7.0", features = ["proptest1"] }
