[package]
name = "bxt-strafe"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = { version = "0.7.4", features = ["serde"] }
bxt-vct = { path = "../bxt-vct" }
glam = { version = "0.24.1", features = ["serde"] }
hltas = { version = "0.9.0" }
serde = { version = "1.0.174", features = ["derive"] }
tap = "1.0.1"

[dev-dependencies]
ncollide3d = "0.33.0"
proptest = "1.2.0"
proptest-derive = "0.3.0"
hltas = { version = "0.9.0", features = ["proptest1"] }
